Solid fuel rocket boosters, scan error highlighting, etc.
Revert "structures: i'm sorry i cannot"

This reverts commit 8dafa2b0